fix hero not showing dropdown bar

--- a/tyk-docs/static/css/bespoke.css
+++ b/tyk-docs/static/css/bespoke.css
@@ -3379,7 +3379,6 @@ body {
   position: relative;
   color: #FFF;
   min-height: 640px;
-  overflow: hidden;
 }
 
 .hero:before {
